# heap-snapshot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: tui_bench.rs
data/: weakmap.html
npm/darwin-arm64/: package.json
npm/heap-snapshot/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-arm64/: package.json
npm/win32-x64/: package.json
scripts/: bump-version.py  deploy-web.py  fmt.py  monitor.py  server.py  test.py
src/: diff.rs  display.rs  function_info.rs  lib.rs  main.rs  mcp.rs  parser.rs  retaining_path.rs  snapshot.rs  types.rs  utils.rs
src/function_info/: tests.rs
src/print/: closure_leaks.rs  closures.rs  containment.rs  context_tree.rs  contexts.rs  diff.rs  mod.rs  retainers.rs  roots.rs  scopes.rs  show.rs  show_retainers.rs  statistics.rs  strings.rs  summary.rs  timeline.rs  unreachable.rs
src/snapshot/: load.rs  tests.rs
src/tui/: app.rs  bench.rs  children.rs  flatten.rs  history.rs  input.rs  mod.rs  render.rs  tests.rs  types.rs
tests/: common.rs  e2e_containment.rs  e2e_contexts.rs  e2e_diff.rs  e2e_mcp.rs  e2e_number_display.rs  e2e_retainers.rs  e2e_roots.rs  e2e_show.rs  e2e_show_retainers.rs  e2e_stack.rs  e2e_strings.rs  e2e_summary.rs  e2e_unreachable.rs
tests/data/: closures.heapsnapshot  closures.js  expected_contexts_closures_min_retained_0.txt  expected_contexts_closures_min_retained_100.txt  expected_contexts_closures_min_var_retained_0.txt  expected_contexts_heap1_default.txt  expected_contexts_heap1_min_retained_0.txt  expected_contexts_heap1_min_var_retained_3k.txt  expected_mcp_close_snapshot.txt  expected_mcp_close_snapshot_missing.txt  expected_mcp_compare_snapshots_heap1_vs_heap2.txt  expected_mcp_compare_snapshots_heap2_vs_heap1.txt  expected_mcp_compare_snapshots_heap2_vs_heap1_newobject.txt  expected_mcp_compare_snapshots_heap3_vs_heap1.txt  expected_mcp_compare_snapshots_heap3_vs_heap1_newobject_limit3.txt  expected_mcp_compare_snapshots_identical.txt  expected_mcp_get_closure_leaks_show_incomplete.txt  expected_mcp_get_containment.txt  expected_mcp_get_dominators_of_handle_scope.txt  expected_mcp_get_duplicate_strings_default.txt  expected_mcp_get_duplicate_strings_limit3.txt  expected_mcp_get_duplicate_strings_limit3_show_ids.txt  expected_mcp_get_duplicate_strings_offset0_limit2.txt  expected_mcp_get_duplicate_strings_offset2_limit2.txt  expected_mcp_get_duplicate_strings_offset_past_end.txt  expected_mcp_get_native_contexts.txt  expected_mcp_get_reachable_size_handle_scope.txt  expected_mcp_get_reachable_size_root.txt  expected_mcp_get_retaining_paths_limited_success.txt  expected_mcp_get_retaining_paths_root_target.txt  expected_mcp_get_retaining_paths_truncated_success.txt  (+39 more)
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/wasm/: Cargo.toml
web/wasm/src/: lib.rs
(+56 files in other folders)
