[package]
name = "heap-snapshot"
version = "0.0.6"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
regex = "1"
rustc-hash = "2"
dirs = "6"
sha2 = "0.10"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
unicode-width = "0.2"
ureq = "3"
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1"

[[bin]]
name = "heap-snapshot-mcp"
path = "src/mcp.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "tui_bench"
harness = false
