[workspace]
members = [".", "web/wasm"]

[package]
name = "heap-snapshot"
version = "0.0.6"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:crossterm", "dep:ratatui", "dep:dirs", "dep:sha2",
       "dep:unicode-width", "dep:ureq", "dep:toml", "dep:rmcp", "dep:tokio",
       "dep:schemars"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
crossterm = { version = "0.28", optional = true }
ratatui = { version = "0.29", optional = true }
regex = "1"
rustc-hash = "2"
dirs = { version = "6", optional = true }
sha2 = { version = "0.10", optional = true }
toml = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
unicode-width = { version = "0.2", optional = true }
ureq = { version = "3", optional = true }
rmcp = { version = "1.3", features = ["server", "transport-io"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
schemars = { version = "1", optional = true }
oxc_allocator = "0.123"
oxc_ast = "0.123"
oxc_ast_visit = "0.123"
oxc_parser = "0.123"
oxc_semantic = "0.123"
oxc_span = "0.123"
oxc_syntax = "0.123"

[[bin]]
name = "heap-snapshot-mcp"
path = "src/mcp.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "tui_bench"
harness = false
