[package]
name = "heap-snapshot-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
heap-snapshot = { path = "../..", default-features = false }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
js-sys = "0.3"
